--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/tightrope.js",
     "test": "jest",
     "prettier": "prettier --write .",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
